// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`archive save-to-disk-modal-fail 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Повторите попытку позже.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`archive save-to-disk-modal-fail 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Повторите попытку позже.
  </span>
</div>
`;

exports[`archive save-to-disk-modal-ok 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл saved-file-from-archive.ext сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url/for/archive"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`archive save-to-disk-modal-ok 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url/for/archive"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;

exports[`archive save-to-disk-modal-out-of-space 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Недостаточно свободного места.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`archive save-to-disk-modal-out-of-space 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Недостаточно свободного места.
  </span>
</div>
`;

exports[`document save-to-disk-modal-fail 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Повторите попытку позже.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`document save-to-disk-modal-fail 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Повторите попытку позже.
  </span>
</div>
`;

exports[`document save-to-disk-modal-ok 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="some/folder/url"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`document save-to-disk-modal-ok 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="some/folder/url"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'save')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;

exports[`document save-to-disk-modal-out-of-space 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <span>
        Не удалось сохранить файл на Диск.
Недостаточно свободного места.
      </span>
    </div>
  </div>
</lego-components_modal>
`;

exports[`document save-to-disk-modal-out-of-space 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Не удалось сохранить файл на Диск.
Недостаточно свободного места.
  </span>
</div>
`;

exports[`editing save-to-disk-modal-ok 1`] = `
<lego-components_modal
  autoclosable="false"
  theme="normal"
  trapfocus="false"
  visible="true"
>
  <div
    class="wrapper"
  >
    <span
      class="close"
    >
      <ufo-rocks_icon />
    </span>
    <div
      class="content"
    >
      <div>
        <span>
          Файл  сохранен на ваш Яндекс Диск
в папку 
          <lego-components_link
            data-ref="link"
            href="/folder/url/for/editing"
            onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
            theme="normal"
          >
            Загрузки
          </lego-components_link>
          .
        </span>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`editing save-to-disk-modal-ok 2`] = `
<div
  class="snackBar snackBar_visible"
>
  <span>
    Сохранено на ваш Яндекс Диск
  </span>
  <lego-components_link
    classname="action"
    href="/folder/url/for/editing"
    onclick="() => metrika.countLinkToDownloads(props.protocol, 'edit')"
    theme="normal"
  >
    <span>
      Открыть
    </span>
  </lego-components_link>
</div>
`;
